Fix build of transform.c
rozofs/src/transform.c:111: error: undefined reference to 'pow'

Signed-off-by: Marc-Antoine Perennou <Marc-Antoine@Perennou.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -109,7 +109,7 @@ add_executable(rozofsmount
     rozofsmount.c
 )
 #pthread need by fuse 
-target_link_libraries(rozofsmount ${PTHREAD_LIBRARY} ${FUSE_LIBRARY} ${CRYPT_LIBRARY})
+target_link_libraries(rozofsmount ${PTHREAD_LIBRARY} ${FUSE_LIBRARY} ${CRYPT_LIBRARY} -lm)
 
 # Install
 install(CODE "EXECUTE_PROCESS (COMMAND mkdir -p ${ROZOFS_CONFIG_DIR})" COMPONENT storage)
